Bug 207281 - Reply by EMail has a broken mail structure
Summary: Reply by EMail has a broken mail structure
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-13 20:20 UTC by András Manţia
Modified: 2009-09-27 20:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description András Manţia 2009-09-13 20:20:21 UTC
Hi,
 if I reply by email to a post, eg. to kde-pim list, it shows the To: field as being kde-pim@kde.org, but if I view the message source, the To: field is missing. The problem is that the mails end up in the moderation queue due to this with the error: Message has implicit destination .
Comment 1 Olivier Trichet 2009-09-27 20:51:58 UTC
SVN commit 1028621 by otrichet:

Adapt KNode's code to the new spirit of KMime::Content (and its subclasses) introduce in commit 1010014.

Fix a regression: it was not possible anymore to post an article or send an email.
BUG: 207281

 M  +23 -153   knarticle.cpp  
 M  +0 -35     knarticle.h  
 M  +15 -4     kncomposer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1028621