Adapt KNode's code to the new spirit of KMime::Content (and its subclasses) introduce in commit 1010014.

Fix a regression: it was not possible anymore to post an article or send an email.
BUG: 207281

svn path=/trunk/KDE/kdepim/knode/; revision=1028621